# theia

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  README.md  USAGE.md  index.html  mkdocs.yml  project_letter_set.py  requirements-gh.txt  requirements.txt  search.html  setup.cfg
.github/workflows/: docs.yml  python.yml
blender/: launch_script.sh  letter_gen.py
docs/: channels.md  color.md  grid.md  image.md  index.md  outline.md  palettes.md
palettes/: blog.txt  horizon.txt
projects/: bulk_neon_icons.py  bulk_tidy.py  color_view.py  generate_bulk_fonts.py  generate_letters.py  grid_image_background.py  imageception.py  neon_rainbow.py  palette_apply.py  paletteify.py  thumbnail_generator.py  vcolorizer.py  visualize_colors.py  visualize_colors_mspaint.py
projects/blender/: letter_gen.py
projects/sourcetools/: qc_templater.py  vmt_templater.py
python/: generate_bulk_fonts.py  generate_letter_set.py
python/blender/: launch_script.py  letter_gen.py
python/source/: qc_templater.py
python/utils/: channels.py  color.py  palettes.py  pattern.py
qc_templates/: letter_base.qc
scripts/: install_vtfcmd.sh
search/: search_index.json
source/: compileqc.sh  qc_templater.py
templates/qc/: letter_base.qc  letter_base_small.qc
templates/vmt/: basic_lightmapped.vmt  basic_tintable.vmt  basic_vertexlit.vmt
theia/: __init__.py  channels.py  color.py  flaticon.py  generate_bulk_fonts.py  generate_letter_set.py  grid.py  outline.py  palettes.py
theia/blender/: letter_gen.py
utils/: __init__.py  channels.py  color.py  gif.py  outline.py
(+26 files in other folders)
