[metadata]
name = rafraser-theia
version = 0.0.1
author = Robert A Fraser
author_email = robert.fraser@uqconnect.edu.au
description = Automating aspects of image generation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rafraser/theia
classifiers =
    Programming Language :: Python :: 3.8
    Licence :: OSI Approved :: MIT Licence
    Operating System :: OS Independent
    Development Status :: 2 - Pre-Alpha
    Natural Language :: English
    Topic :: Multimedia :: Graphics
    Typing :: Typed

[options]
packages = theia
install_requires =
    Pillow
    requests
python_requires = >=3.8